# indicate_nonredundant_halfplanes

./: .gitignore  COPYRIGHT.txt  LICENSE  README.txt  find_BFS.m  normalize_halfplane_description.m  rownorm.m  subspacify_polyhedron.m  superspacify_polyhedron.m  test_all_implementations.m  test_matlab_cpp_comparison.m
cpp_implementation/: CMakeLists.txt  QHULL_INTEGRATION.md  README.md
cpp_implementation/examples/: basic_example.cpp
cpp_implementation/include/polytope_redundancy/: active_set_solver.hpp  core.hpp  geometry.hpp  matrix_utils.hpp  qhull_solver.hpp
cpp_implementation/src/: active_set_solver.cpp  core.cpp  find_bfs.cpp  matrix_utils.cpp  qhull_solver.cpp
cpp_implementation/tests/: test_core.cpp  test_main.cpp  test_matlab_compatibility.cpp  test_qhull_comparison.cpp  test_utils.cpp
matlab_implementation/: active_set_solver.m  get_eq_and_ineq_constr.m  indicate_nonredundant_halfplanes.m  make_set_symmetric.m  qhull_minimal_representation.m
matlab_octave_implementation/: linprog.m  unique_tol.m
